--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       <div class="flex flex-col items-center gap-2">
           <span class="lg:text-base">Hello, I am</span>
           <span class="lg:text-4xl font-semibold lg:font-normal">Rajinder Singh Sodhi</span>
-          <span class="lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
+          <span class="lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Software Engineer</span>
       </div>
       <div class="flex items-center">
         <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download Resume</a>
@@ -50,7 +50,7 @@
     <p class="flex text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
   </div>
   <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
-    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-11/12">
+    <div class="flex flex-col items-center border bg-white rounded-3xl p-5 lg:w-1/2 w-11/12">
       <div class="flex items-center gap-2 my-2 lg:m-0">
         <img src="experience-icon.png" alt="" style="height: 1.5rem;">
         <h1 class="text-xl font-bold">Work Experience</h1>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-11/12">
+    <div class="flex flex-col items-center border bg-white rounded-3xl p-5 lg:w-1/2 w-11/12">
       <div class="flex">
         <img src="education-icon.png" alt="" style="height: 2rem;" class="px-2">
         <h1 class="text-xl font-bold">Education</h1>
@@ -106,7 +106,7 @@
       <h1 class="text-5xl font-semibold">Experience</h1>
     </div>
     <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col items-center  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl">Frontend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col items-center  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl">Backend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -136,7 +136,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <div class="flex justify-center">
           <h1 class="text-xl">Programming Languages</h1>
         </div>
@@ -162,7 +162,7 @@
       <h1 class="text-5xl font-semibold">Projects</h1>
     </div>
     <div class="flex flex-col lg:flex-row justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Convocraze</h1>
         <div class="flex flex-col items-start">
           <h1>Chating web app</h1>
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Disney Hotstar Clone</h1>
         <div class="flex flex-col items-start">
           <h1>Frontend clone of Disney Hotstar</h1>
@@ -202,7 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
+      <div class="flex flex-col items-start  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Covid Management System</h1>
         <div class="flex flex-col items-start">
           <h1>management of covid vaccination</h1>
@@ -232,7 +232,7 @@
       <h1 class="text-5xl font-semibold">Contact Me</h1>
     </div>
     <div class="flex justify-evenly gap-10 mx-3">
-      <div class="flex flex-col lg:flex-row items-center gap-10 border-neutral-400 border rounded-3xl p-5">
+      <div class="flex flex-col lg:flex-row items-center gap-10 bg-white border rounded-3xl p-5">
         <div class="flex items-center gap-3">
           <img src="email-icon.png" alt="" style="height:1.5rem;">
           <span class="text-lg">rajindersodhi181&#64;gmail.com</span>
